# knowledge_hub

./: README.md
cs/Linux/applications/cmd/: cmd.md  operate.py
cs/compile/cmake/: README.md
cs/compile/cmake/commands/: README.md  cmake_minimum_required.md  message  message.md  project  project.md
cs/compile/cmake/scenarios/: README.md
cs/compile/cmake/scenarios/multi_layer_single_app/: CMakeLists.txt  README.md  main.cpp
cs/compile/cmake/scenarios/multi_layer_single_app/include/: test_class.h
cs/compile/cmake/scenarios/multi_layer_single_app/src/: test_class.cpp
cs/compile/cmake/scenarios/multi_layer_single_app/sub1/: sub1.cmake
cs/compile/cmake/scenarios/multi_layer_single_app/sub1/include/: test_class1.h  test_class2.h
cs/compile/cmake/scenarios/multi_layer_single_app/sub1/src/: test_class1.cpp
cs/compile/cmake/scenarios/multi_layer_single_app/sub1/sub2/: sub2.cmake  test_class2.cpp
cs/compile/cmake/variables/: variables.md
cs/compile/gcc/: rpath.md
cs/design patterns/: README.md  preface.md
cs/design patterns/component collaboration/01-Template_Method/: Template Method.md  no_template.cpp  template.cpp
cs/design patterns/component collaboration/02-Strategy/: Strategy.md  no_pattern.cpp  strategy.cpp
cs/design patterns/component collaboration/03-Observer_Event/: Observer Event.md  (+2 more)
cs/git/hook/: introduction.md
cs/languages/SQL/: introduction.md  select.md
cs/languages/cpp/cpp_syntax/class/code/: CMakeLists.txt
cs/languages/cpp/cpp_syntax/class/code/inc/: animal.h  const_obj.h  explicit.h  operator.h  person.h  space.h  static.h
cs/languages/cpp/cpp_syntax/class/code/src/: animal.cpp  const_obj.cpp  encapsulation.cpp  explicit.cpp  extern_c.c  main.cpp  operator.cpp  person.cpp  space.cpp  static.cpp
cs/network/: study.md
tools/vscode/: shortcuts.md
(+89 files in other folders)
